--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
+  "name": "assignment5",
+  "version": "0.0.0",
+  "type": "module",
   "dependencies": {
     "three": "^0.163.0"
   },
   "devDependencies": {
+    "@types/three": "^0.163.0",
     "vite": "^5.2.10"
   },
   "scripts": {
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "dev": "vite"
   }
 }
