--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "vite": "^5.2.10"
   },
   "scripts": {
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview",
     "dev": "vite"
   }
